Pin upstream Docker images using SHA digests.

--- a/simplesamlphp/Dockerfile
+++ b/simplesamlphp/Dockerfile
@@ -1,4 +1,4 @@
-FROM unicon/simplesamlphp
+FROM unicon/simplesamlphp@sha256:6daff6f7ea8dcf24fdb937906388b0af5dadbf20276086ab22fd8b7b9b9201db
 
 RUN yum -y update \
     && yum -y install php55w-ldap \
