--- a/httpd-proxy/etc-httpd/conf.d/httpd.conf
+++ b/httpd-proxy/etc-httpd/conf.d/httpd.conf
@@ -53,4 +53,8 @@ EECDH EDH+aRSA !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS !RC4"
     ProxyPassReverse /simplesaml https://simplesamlphp/simplesaml
    
     ProxyPass /php-ssp-protected https://simplesamlphp/php-ssp-protected
+
+    ProxyPass /fcrepo http://sp/fcrepo
+    ProxyPassReverse /fcrepo http://sp/fcrepo
+
 </VirtualHost>
