--- a/sp/etc-httpd/conf.d/sp.conf
+++ b/sp/etc-httpd/conf.d/sp.conf
@@ -1,5 +1,5 @@
 ServerName idptestbed
-
+LoadModule proxy_ajp_module modules/mod_proxy_ajp.so
 <VirtualHost *:80>
     ServerName https://idptestbed:443
     UseCanonicalName On
@@ -11,5 +11,24 @@ ServerName idptestbed
         ShibRequestSetting requireSession 1
         require shib-session
     </Location>
-    
+
+    <Location /fcrepo>
+        AuthType shibboleth
+        ShibRequestSetting requireSession 1
+        # Pass attributes received from Shib as HTTP headers to Fedora
+        ShibUseHeaders On
+        require shib-session
+
+        AddOutputFilterByType SUBSTITUTE text/html
+        Substitute "s|http://idptestbed|https://idptestbed|n"
+    </Location>
+
+    ProxyPreserveHost on
+    RequestHeader set X-Forwarded-Proto "https" env=HTTPS
+    RequestHeader set REMOTE_USER %{REMOTE_USER}s
+
+    ProxyIOBufferSize 65536
+    ProxyPassReverse /fcrepo http://fedora:8080/fcrepo
+    ProxyPass /fcrepo ajp://fedora:8009/fcrepo
+
 </VirtualHost>
