--- a/idp/shibboleth-idp/conf/idp.properties
+++ b/idp/shibboleth-idp/conf/idp.properties
@@ -63,7 +63,7 @@ idp.encryption.cert= %{idp.home}/credentials/idp-encryption.crt
 #idp.storage.htmlLocalStorage = false
 
 # Set to true to expose more detailed errors in responses to SPs
-#idp.errors.detailed = false
+idp.errors.detailed = true
 # Set to false to skip signing of SAML response messages that signal errors
 #idp.errors.signed = true
 # Name of bean containing a list of Java exception classes to ignore
